# Codex-Mate

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  REFACTOR.md  UI_PREVIEW.md  index.html  package.json  tsconfig.json
.github/workflows/: release.yml  tag-and-bump.yml
doc/: 1、初级创建项目prompt.md  workflow-fix-explanation.md
src/: codexMate.ts  fsUtil.ts  index.ts  main.tsx  paths.ts  styles.css  tomlUtil.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/config/: menuConfig.tsx
src/hooks/: index.ts
src/ui/: App.tsx  ConfigEditor.tsx  Home.tsx  Mcp.tsx  Nodes.tsx  Projects.tsx  Settings.tsx
src/ui/components/: Common.tsx  Layout.tsx  MainContent.tsx  Sidebar.tsx
src/ui/pages/: ConfigEditor.tsx  Mcp.tsx  Nodes.tsx  Projects.tsx  Settings.tsx
src/utils/: index.ts
